@@ -156,6 +156,7 @@ android {
     compileOptions {
         sourceCompatibility = androidSourceCompatibility
         targetCompatibility = androidTargetCompatibility
+        arguments("--add-modules=java.xml.bind")
     }
 }
 
